// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ListImage with default variant & styles 1`] = `
<View
  style={
    [
      [
        {
          "height": 56,
          "width": 30,
        },
        {
          "height": 119.42857142857143,
          "width": 119.42857142857143,
        },
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0.01,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <FastImageView
      collapsable={false}
      defaultSource={null}
      onFastImageLoad={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": undefined,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="list-image"
    />
  </View>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0.01,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <FastImageView
      collapsable={false}
      defaultSource={null}
      onFastImageLoad={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": undefined,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="list-image"
    />
  </View>
</View>
`;

exports[`renders ListImage with default variant 1`] = `
<View
  style={
    [
      [
        undefined,
        {
          "height": 119.42857142857143,
          "width": 119.42857142857143,
        },
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0.01,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <FastImageView
      collapsable={false}
      defaultSource={null}
      onFastImageLoad={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": undefined,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="list-image"
    />
  </View>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0.01,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <FastImageView
      collapsable={false}
      defaultSource={null}
      onFastImageLoad={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": undefined,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="list-image"
    />
  </View>
</View>
`;
